force-app/main/default/objects/Product2/fields/Cost_price__c.field-meta.xml
<CustomField>
    <fullName>Cost_price__c</fullName>
    <description>this field will store the cost price of the product</description>
    <label>Cost price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>