force-app/main/default/objects/Product2/fields/Fabric__c.field-meta.xml
<CustomField>
    <fullName>Fabric__c</fullName>
    <description>this field will store the details of fabric</description>
    <label>Fabric</label>
    <length>50</length>
    <type>Text</type>
</CustomField>