force-app/main/default/objects/Product2/fields/Product_category__c.field-meta.xml
<CustomField>
    <fullName>Product_category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this fied wil store the category of the product</description>
    <label>Product category</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>