force-app/main/default/objects/Product2/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>this feild will store the size of the product</description>
    <label>Size</label>
    <length>12</length>
    <type>Text</type>
</CustomField>