force-app/main/default/objects/Product2/fields/supplier__c.field-meta.xml
<CustomField>
    <fullName>supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field will store the supplier details</description>
    <label>supplier</label>
    <referenceTo>supplier__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>