force-app/main/default/objects/Product2/validationRules/product_category.validationRule-meta.xml
<ValidationRule>
    <fullName>product_category</fullName>
    <active>true</active>
    <description>This rule wull be applied to the product category field that it should not be null</description>
    <errorConditionFormula>ISBLANK( Product_category__c )</errorConditionFormula>
    <errorDisplayField>Product_category__c</errorDisplayField>
    <errorMessage>This field is mandatory.</errorMessage>
</ValidationRule>