force-app/main/default/objects/Product2/validationRules/Unique_SKU.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_SKU</fullName>
    <active>true</active>
    <description>This will validate if a user is entering invalid amount to every product</description>
    <errorConditionFormula>Cost_price__c   &lt;= 1   &amp;&amp;  Selling_Price__c  &lt;= 1</errorConditionFormula>
    <errorMessage>Price can not be 0, Enter valid price</errorMessage>
</ValidationRule>